[gd_scene load_steps=11 format=2]

[ext_resource path="res://resources/sprites/animated/enemies/enemy_slime.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemies/old_enemy_slime.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "move",
"speed": 16.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 39.0

[node name="Slime" type="Area2D"]
scale = Vector2( 0.5, 1 )
z_as_relative = false
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -26 )
scale = Vector2( 4, 4 )
z_as_relative = false
frames = SubResource( 7 )
animation = "move"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -34 )
shape = SubResource( 8 )

[node name="PathfindTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Slime_area_entered"]
[connection signal="timeout" from="PathfindTimer" to="." method="_on_PathfindTimer_timeout"]
